fix overlap of roster score on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -598,7 +598,7 @@ Phone size
     .row .fifth{
         border:0px solid red;
         float:left;
-        max-width:6em;
+        /*max-width:6em;*/
         font-size:80%;
     }
     .row .fourfifth{
